@@ -148,8 +148,8 @@ tick.major.size     : 4      # major tick size in points
 tick.minor.size     : 2      # minor tick size in points
 tick.major.pad      : 4      # distance to major tick label in points
 tick.minor.pad      : 4      # distance to the minor tick label in points
-tick.color          : black  # color of the tick labels 
-tick.labelsize      : 10     # fontsize of the tick labels
+tick.color          : k      # color of the tick labels 
+tick.labelsize      : 12     # fontsize of the tick labels
 
 ### Grids
 grid.color       :   black       # grid color
