@@ -178,54 +178,92 @@ agg23/src/ChangeLog
 agg23/src/Makefile
 agg23/src/Makefile.am
 agg23/src/agg_arc.cpp
+agg23/src/agg_arc.o
 agg23/src/agg_arrowhead.cpp
+agg23/src/agg_arrowhead.o
 agg23/src/agg_bezier_arc.cpp
+agg23/src/agg_bezier_arc.o
 agg23/src/agg_bspline.cpp
+agg23/src/agg_bspline.o
 agg23/src/agg_curves.cpp
+agg23/src/agg_curves.o
 agg23/src/agg_embedded_raster_fonts.cpp
+agg23/src/agg_embedded_raster_fonts.o
 agg23/src/agg_gsv_text.cpp
+agg23/src/agg_gsv_text.o
 agg23/src/agg_image_filters.cpp
+agg23/src/agg_image_filters.o
 agg23/src/agg_line_aa_basics.cpp
+agg23/src/agg_line_aa_basics.o
 agg23/src/agg_line_profile_aa.cpp
+agg23/src/agg_line_profile_aa.o
 agg23/src/agg_path_storage.cpp
+agg23/src/agg_path_storage.o
 agg23/src/agg_rasterizer_scanline_aa.cpp
+agg23/src/agg_rasterizer_scanline_aa.o
 agg23/src/agg_rounded_rect.cpp
+agg23/src/agg_rounded_rect.o
 agg23/src/agg_sqrt_tables.cpp
+agg23/src/agg_sqrt_tables.o
 agg23/src/agg_trans_affine.cpp
+agg23/src/agg_trans_affine.o
 agg23/src/agg_trans_double_path.cpp
+agg23/src/agg_trans_double_path.o
 agg23/src/agg_trans_single_path.cpp
+agg23/src/agg_trans_single_path.o
 agg23/src/agg_trans_warp_magnifier.cpp
+agg23/src/agg_trans_warp_magnifier.o
 agg23/src/agg_vcgen_bspline.cpp
+agg23/src/agg_vcgen_bspline.o
 agg23/src/agg_vcgen_contour.cpp
+agg23/src/agg_vcgen_contour.o
 agg23/src/agg_vcgen_dash.cpp
+agg23/src/agg_vcgen_dash.o
 agg23/src/agg_vcgen_markers_term.cpp
+agg23/src/agg_vcgen_markers_term.o
 agg23/src/agg_vcgen_smooth_poly1.cpp
+agg23/src/agg_vcgen_smooth_poly1.o
 agg23/src/agg_vcgen_stroke.cpp
+agg23/src/agg_vcgen_stroke.o
 agg23/src/agg_vpgen_clip_polygon.cpp
+agg23/src/agg_vpgen_clip_polygon.o
 agg23/src/agg_vpgen_clip_polyline.cpp
+agg23/src/agg_vpgen_clip_polyline.o
 agg23/src/agg_vpgen_segmentator.cpp
+agg23/src/agg_vpgen_segmentator.o
 agg23/src/authors
 agg23/src/autogen.sh
 agg23/src/configure.in
 agg23/src/copying
 agg23/src/install
+agg23/src/libagg.a
 agg23/src/news
 agg23/src/readme
 agg23/src/ctrl/Makefile.am
 agg23/src/ctrl/agg_bezier_ctrl.cpp
+agg23/src/ctrl/agg_bezier_ctrl.o
 agg23/src/ctrl/agg_cbox_ctrl.cpp
+agg23/src/ctrl/agg_cbox_ctrl.o
 agg23/src/ctrl/agg_gamma_ctrl.cpp
+agg23/src/ctrl/agg_gamma_ctrl.o
 agg23/src/ctrl/agg_gamma_spline.cpp
+agg23/src/ctrl/agg_gamma_spline.o
 agg23/src/ctrl/agg_polygon_ctrl.cpp
+agg23/src/ctrl/agg_polygon_ctrl.o
 agg23/src/ctrl/agg_rbox_ctrl.cpp
+agg23/src/ctrl/agg_rbox_ctrl.o
 agg23/src/ctrl/agg_scale_ctrl.cpp
+agg23/src/ctrl/agg_scale_ctrl.o
 agg23/src/ctrl/agg_slider_ctrl.cpp
+agg23/src/ctrl/agg_slider_ctrl.o
 agg23/src/ctrl/agg_spline_ctrl.cpp
+agg23/src/ctrl/agg_spline_ctrl.o
 agg23/src/platform/Makefile.am
 agg23/src/platform/AmigaOS/agg_platform_support.cpp
 agg23/src/platform/BeOS/agg_platform_support.cpp
 agg23/src/platform/X11/Makefile.am
 agg23/src/platform/X11/agg_platform_support.cpp
+agg23/src/platform/X11/agg_platform_support.o
 agg23/src/platform/mac/agg_mac_pmap.cpp
 agg23/src/platform/mac/agg_platform_support.cpp
 agg23/src/platform/sdl/agg_platform_support.cpp
@@ -279,6 +317,7 @@ examples/cursor_demo.py
 examples/custom_ticker1.py
 examples/customize_rc.py
 examples/dash_control.py
+examples/dashpointlabel.py
 examples/dashtick.py
 examples/data_helper.py
 examples/date_demo1.py
@@ -526,7 +565,6 @@ lib/dateutil/rrule.py
 lib/dateutil/tz.py
 lib/matplotlib/.cvsignore
 lib/matplotlib/__init__.py
-lib/matplotlib/__init__.py.~1.53.~
 lib/matplotlib/_contour.py
 lib/matplotlib/_image.py
 lib/matplotlib/_mathtext_data.py
@@ -535,18 +573,15 @@ lib/matplotlib/_transforms.py
 lib/matplotlib/afm.py
 lib/matplotlib/agg.py
 lib/matplotlib/artist.py
-lib/matplotlib/artist.py.~1.21.~
 lib/matplotlib/axes.py
 lib/matplotlib/axes.py.orig
-lib/matplotlib/axes.py.~1.104.~
 lib/matplotlib/axis.py
-lib/matplotlib/axis.py.~1.23.~
+lib/matplotlib/axis.py.orig
+lib/matplotlib/axis.py.rej
 lib/matplotlib/backend_bases.py
 lib/matplotlib/cbook.py
 lib/matplotlib/cm.py
-lib/matplotlib/cm.py.~1.16.~
 lib/matplotlib/collections.py
-lib/matplotlib/collections.py.~1.20.~
 lib/matplotlib/colors.py
 lib/matplotlib/contour.py
 lib/matplotlib/dates.py
@@ -560,19 +595,16 @@ lib/matplotlib/mathtext.py
 lib/matplotlib/mlab.py
 lib/matplotlib/patches.py
 lib/matplotlib/pylab.py
-lib/matplotlib/pylab.py.~1.63.~
 lib/matplotlib/pyparsing.py
 lib/matplotlib/table.py
 lib/matplotlib/texmanager.py
 lib/matplotlib/text.py
 lib/matplotlib/ticker.py
-lib/matplotlib/ticker.py.~1.25.~
 lib/matplotlib/transforms.py
 lib/matplotlib/windowing.py
 lib/matplotlib/backends/.cvsignore
 lib/matplotlib/backends/__init__.py
 lib/matplotlib/backends/backend_agg.py
-lib/matplotlib/backends/backend_agg.py.~1.25.~
 lib/matplotlib/backends/backend_agg2.py
 lib/matplotlib/backends/backend_cairo.py
 lib/matplotlib/backends/backend_fltkagg.py
@@ -641,7 +673,6 @@ lib/matplotlib/enthought/util/__init__.py
 lib/matplotlib/enthought/util/resource.py
 lib/matplotlib/numerix/.cvsignore
 lib/matplotlib/numerix/__init__.py
-lib/matplotlib/numerix/__init__.py.~1.2.~
 lib/matplotlib/numerix/_na_imports.py
 lib/matplotlib/numerix/_nc_imports.py
 lib/matplotlib/numerix/fft/__init__.py
@@ -1265,6 +1296,7 @@ swig/agg_path_storage.i
 swig/agg_rasterizer_scanline_aa.i
 swig/agg_renderer_base.i
 swig/agg_renderer_scanline.i
+swig/agg_scanline_bin.i
 swig/agg_trans_affine.i
 swig/agg_typedefs.h
 swig/agg_typemaps.i
