@@ -142,7 +142,7 @@ the exception of those in mlab.py provided by matplotlib.
 """
 from __future__ import generators
 
-__version__  = '0.81'
+__version__  = '0.81.1'
 __revision__ = '$Revision$'
 __date__     = '$Date$'
 
